<?xml version="1.0" encoding="utf-8"?>
<!--
	~ SPDX-FileCopyrightText: 2025-2026 MDP43140
	~ SPDX-License-Identifier: GPL-3.0-or-later
	-->
<resources>
	<string name="app_name">SuperFreezZ Next</string>
	<string name="about">About</string>
	<string name="accessibility_svc_active">Accessibility service active</string>
	<string name="accessibility_svc_name">SuperFreezZ Next accessibility service</string>
	<string name="accessibility_svc_sum">This service lets you automate stopping apps, and do it faster. SuperFreezZ Next uses the accessibility service to click "Force stop", "OK", and "Back". It finds those buttons by retrieving Settings content and tracking their appearance. On Android 9 and higher, it can also lock the screen after stopping apps.</string>
	<string name="all_apps_stopped">All apps are already stopped.</string>
	<string name="apps_is_selected">%d apps selected</string>
	<string name="apps_is_stopped">%d apps stopped</string>
	<string name="apps_system">System apps</string>
	<string name="apps_user">User apps</string>
	<string name="categorize_none">None</string>
	<string name="categorize_appState">Stop state</string>
	<string name="categorize_unusedFirst">Unused state</string>
	<string name="categorize_userSystem">User/System</string>
	<string name="currently_stopping">Currently stopping apps...</string>
	<string name="data_import">Import Data</string>
	<string name="data_export">Export Data</string>
	<string name="data_import_sum">Restore settings from backup file</string>
	<string name="data_export_sum">Backup settings to XML/JSON file</string>
	<string name="delayAfterStepDetected_title">Accessibility: Add delay after each steps</string>
	<string name="delayAfterStepDetected_sum">Fixes odd bug where stopping from shortcut may stuck at confirmation dialog</string>
	<string name="dontStopMediaPlayback_title">Detection: Ignore apps that plays media</string>
	<string name="dontStopMediaPlayback_sum">Don\'t stop apps that\'s currently playing a media</string>
	<string name="dontStopPersistentNotification_title">Detection: Ignore apps that has ongoing notification</string>
	<string name="dontStopPersistentNotification_sum">Don\'t stop apps that has ongoing notification (eg. Termux, KDE Connect, Syncthing)</string>
	<string name="dynColor">Dynamic colors</string>
	<string name="dynColor_sum">Enables dynamic colors (requires Android 12+)</string>
	<string name="force_stop">Force stop</string>
	<string name="foreground">Foreground</string>
	<string name="freezeWhenScreenOff_title">Stop when the screen turns off</string>
	<string name="freezeWhenScreenOff_sum">You will need to disable \"Power button instantly locks\" in the device settings</string>
	<string name="general">General</string>
	<string name="headerSection_otherApps">Other apps</string>
	<string name="headerSection_pendingStop">Pending stop apps</string>
	<string name="headerSection_sysApps">System apps</string>
	<string name="headerSection_userApps">User apps</string>
	<string name="ignore_bgFree">Ignore background-free</string>
	<string name="ignore_running">Ignore running state</string>
	<string name="ime_active">Active Input Method</string>
	<string name="inactiveState">Inactive state</string>
	<string name="installed_from_fdroid">Installed from F-Droid</string>
	<string name="license">License</string>
	<string name="license_sum">Licensed under GPL v3 license</string>
	<string name="manual_stop_tip">Click Force Stop, OK, and Back, until there are no more apps to stop</string>
	<string name="normal">Normal</string>
	<string name="notificationSvc">Media playback notification service</string>
	<string name="off">Off</string>
	<string name="other">Other</string>
	<string name="pitchBlack">Black background on dark theme</string>
	<string name="pitchBlack_sum">Saves battery on OLED displays</string>
	<string name="playingMedia">Playing media</string>
	<string name="restrictStandby_title">Root: Set app standby mode to rare/restricted</string>
	<string name="restrictStandby_sum">Avoids apps from frequently running in background. Resets when the app is opened again</string>
	<string name="reverse">Reverse</string>
	<string name="root_not_avail">Root method is not available, please either grant root access, or use Accesibility/Manual method</string>
	<string name="search">Search</string>
	<string name="setGlobHibernation_title">Root: Set app global hibernation state</string>
	<string name="setGlobHibernation_sum">This is not Greenify\'s Hibernation mode. Will set hibernation state, which clears cache (Android 12+), and resets permission (Android 11+, Android 6-10 with GmsCore, use at your own inconvenience)</string>
	<string name="setInactiveBeforeNormalStop_title">Root: Set inactive before normal stop</string>
	<string name="setInactiveBeforeNormalStop_sum">Makes sure to prevent Android from triggering the stopped app from running in the background</string>
	<string name="setRestrictionLvl_title">Root: App background restriction level</string>
	<string name="setRestrictionLvl_sum">Changes app standby behavior</string>
	<string name="setStopType_title">Root: Stop type</string>
	<string name="setStopType_sum">Changes how the app is being stopped.</string>
	<string name="settings">Settings</string>
	<string name="showDetailedAppStateInfo">Show detailed app state info</string>
	<string name="showDetailedAppStateInfo_sum">eg. What causing the app to be stopped or not (for now its only F-Droid apps)</string>
	<string name="signed_by_fdroid">Signed by F-Droid</string>
	<string name="sort">Sort</string>
	<string name="sort_label">App name</string>
	<string name="sort_pkg">Package name</string>
	<string name="sourceCode">Source code</string>
	<string name="sourceCode_sum">Check out the source code on GitHub!</string>
	<string name="state_bgFree">Background-free</string>
	<string name="state_unused">Unused</string>
	<string name="state_notStopped">Not stopped</string>
	<string name="state_pendingStop">Pending stop</string>
	<string name="state_normalStop">Normal stop</string>
	<string name="state_inactiveStop">Inactive stop</string>
	<string name="state_inactiveStopBattOptIgn">Inactive stop (battery optimization ignored)</string>
	<string name="stop">Stop</string>
	<string name="stopMode">Stop Mode</string>
	<string name="stopMode_inactive">Inactive (root)</string>
	<string name="stopped">Stopped</string>
	<string name="stoppingApps">Stopping apps</string>
	<string name="termux_not_installed">Termux is not installed, use other methods</string>
	<string name="termux_not_avail">Termux method is not available, please either grant execute external commands access, give root/system/adb shell access to Termux, or use other methods</string>
	<string name="theme">Theme</string>
	<string name="theme_sum">Select theme. Restart app to fully take effect</string>
	<string name="usageStatsAccess_title">Detection: Usage stats access</string>
	<string name="usageStatsAccess_sum">Makes it possible to stop only unused apps</string>
	<string name="workMode_title">Working mode</string>
	<string name="workMode_sum">Choose how SuperFreezZ Next will stop apps</string>
	<string-array name="setRestrictionLvl_val">
		<item>Don\'t change (default)</item>
		<item>Adaptive Bucket (system default)</item>
		<item>Restricted Bucket</item>
		<item>Background Restricted</item>
		<item>Hibernation</item>
	</string-array>
	<string-array name="setStopType_val">
		<item>Stop background/cached process</item>
		<item>Don\'t cancel scheduled alarms &amp; jobs</item>
		<item>Force stop (default)</item>
	</string-array>
	<string-array name="themes_val">
		<item>Follow system</item>
		<item>Light</item>
		<item>Dark</item>
	</string-array>
	<string-array name="workModes_val">
		<item>Manual</item>
		<item>Accessibility</item>
		<item>Termux (root)</item>
		<item>Root</item>
	</string-array>
	<string-array name="setRestrictionLvl_key" translatable="false">
		<item>dontChange</item>
		<item>adaptive_bucket</item>
		<item>restricted_bucket</item>
		<item>background_restricted</item>
		<item>hibernation</item>
	</string-array>
	<string-array name="setStopType_key" translatable="false">
		<item>kill</item>
		<item>stop-app</item>
		<item>force-stop</item>
	</string-array>
	<string-array name="themes_key" translatable="false">
		<item>system</item>
		<item>light</item>
		<item>dark</item>
	</string-array>
	<string-array name="workModes_key" translatable="false">
		<item>manual</item>
		<item>accessibility</item>
		<item>termux</item>
		<item>root</item>
	</string-array>
	<bool name="leak_canary_allow_in_non_debuggable_build" translatable="false">true</bool>
</resources>
